--- a/.github/workflows/manage_subscribers.yml
+++ b/.github/workflows/manage_subscribers.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   manage_subscribers:
     runs-on: ubuntu-latest
+    environment: news  
 
     steps:
     - name: Checkout repository
@@ -33,10 +34,10 @@ jobs:
 
     - name: Commit and push changes
       env:
-        GH_PAT: ${{ secrets.GH_PAT }}  # Use the GitHub secret here
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }}  
       run: |
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'actions@github.com'
         git add subscribers.json
         git commit -m "Updated subscriber list for ${{ github.event.inputs.action }} ${{ github.event.inputs.email }}"
-        git push https://$GH_PAT@github.com/MichaelCrosson/MichaelCrosson.github.io.git HEAD:main
+        git push https://$GITHUB_TOKEN@github.com/MichaelCrosson/MichaelCrosson.github.io.git HEAD:main
