--- a/.github/workflows/manage_subscribers.yml
+++ b/.github/workflows/manage_subscribers.yml
@@ -14,11 +14,19 @@ on:
 jobs:
   manage_subscribers:
     runs-on: ubuntu-latest
-    environment: news  
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+
+    - name: Debug environment variables
+      run: env
+
+    - name: Show current directory
+      run: pwd
+
+    - name: List current directory contents
+      run: ls -la
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -32,12 +40,17 @@ jobs:
       run: |
         python manage_subscribers.py ${{ github.event.inputs.action }} ${{ github.event.inputs.email }}
 
+    - name: Check if GH_PAT is set
+      run: echo "GH_PAT is set to [${{ secrets.GH_PAT }}]"
+
     - name: Commit and push changes
       env:
-        GITHUB_TOKEN: ${{ secrets.GH_PAT }}  
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       run: |
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'actions@github.com'
         git add subscribers.json
         git commit -m "Updated subscriber list for ${{ github.event.inputs.action }} ${{ github.event.inputs.email }}"
+        git remote -v
+        git log -1
         git push https://$GITHUB_TOKEN@github.com/MichaelCrosson/MichaelCrosson.github.io.git HEAD:main
